frontend: weeklyupdate: fix mialigned anntation layer

--- a/frontend/src/components/News/WeeklyUpdate/PDFReader.css
+++ b/frontend/src/components/News/WeeklyUpdate/PDFReader.css
@@ -1,10 +1,9 @@
 .react-pdf__Page__canvas {
   border-radius: 1em;
-  /* border-color: #f57c00;
-  border-style: solid;
-  border-width: 0.15em; */
 }
 
-/* #pageButton {
-  margin-bottom: 1.5rem;
-} */
+.react-pdf__Page__annotations.annotationLayer {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
